@@ -1,0 +1,24 @@
+#!/usr/bin/env python3
+# This file is part of Tryton.  The COPYRIGHT file at the top level of
+# this repository contains the full copyright notices and license terms.
+import sys
+import os
+
+DIR = os.path.abspath(os.path.normpath(os.path.join(__file__,
+    '..', '..', 'trytond')))
+if os.path.isdir(DIR):
+    sys.path.insert(0, os.path.dirname(DIR))
+
+import trytond.commandline as commandline
+from trytond.config import config
+
+parser = commandline.get_parser_worker()
+options = parser.parse_args()
+config.update_etc(options.configfile)
+commandline.config_log(options)
+
+# Import after application is configured
+import trytond.worker as worker
+
+with commandline.pidfile(options):
+    worker.work(options)
